--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
-        "illuminate/support": "^v10.0.0"
+        "illuminate/support": "^10.0|^11.0"
     },
     "extra": {
         "laravel": {
